--- a/src/App.css
+++ b/src/App.css
@@ -163,85 +163,6 @@ header .header-wrap .cart-button .cart-count {
   font-weight: 600;
 }
 
-.navbar {
-  padding-top: 8px;
-  padding-bottom: 4px;
-  min-height: 20px;
-  max-height: 60px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #fff159;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.164);
-}
-
-.navbar .nav-categories {
-  min-height: 20px;
-  max-height: 60px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 300;
-  color: #252525;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 0.9vw;
-}
-
-.navbar .nav-categories ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 2px;
-}
-
-.navbar .nav-categories ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0;
-  margin-left: 4px;
-  margin-right: 4px;
-}
-
-.navbar .nav-categories ul li .nav-link {
-  text-decoration: none;
-  background-color: #fff159;
-  border: 0;
-  font-size: 1vw;
-  color: #4b4b4b;
-  font-weight: 300;
-}
-
-.navbar .nav-categories ul li .nav-link:hover {
-  color: rgba(0, 0, 0, 0.87);
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 0.9vw;
-}
-
 .content {
   background-color: #ebebeb;
   margin-top: 2px;
@@ -261,7 +182,7 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-search {
-  width: 60%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
@@ -270,16 +191,28 @@ header .header-wrap .cart-button .cart-count {
   padding: 6px;
   margin-top: 2px;
   margin-bottom: 2px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.product-search .home-message {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 6px;
 }
 
 .product-search .product-search-input {
   color: #686868;
   font-size: 0.9em;
   height: 24px;
-  width: 100%;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   padding-left: 14px;
   padding-right: 14px;
@@ -291,6 +224,71 @@ header .header-wrap .cart-button .cart-count {
 
 .product-search .product-search-input:focus {
   color: #383838;
+}
+
+.product-search .nav-categories {
+  padding-top: 8px;
+  min-height: 20px;
+  max-height: 60px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 300;
+  color: #252525;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 0.9vw;
+}
+
+.product-search .nav-categories ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2px;
+}
+
+.product-search .nav-categories ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.product-search .nav-categories ul li .nav-link {
+  text-decoration: none;
+  background-color: #ebebeb;
+  border: 0;
+  font-size: 1vw;
+  color: #4b4b4b;
+  font-weight: 300;
+}
+
+.product-search .nav-categories ul li .nav-link:hover {
+  color: rgba(0, 0, 0, 0.87);
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 0.9vw;
 }
 
 .product-list {
