--- a/src/App.scss
+++ b/src/App.scss
@@ -150,66 +150,8 @@ header {
 }
 
 // ------------------------------------------------------------
-.navbar {
-  padding-top: 8px;
-  padding-bottom: 4px;
-  min-height: 20px;
-  max-height: 60px;
-  width: 100%;
-  display: flex;
-  background-color: $primary-bg-color;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.164);
 
-  .nav-categories {
-    min-height: 20px;
-    max-height: 60px;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    // border: 1px solid blueviolet;
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: 300;
-    color: $nav-text-color;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 0.9vw;
 
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 2px;
-
-      li {
-        display: flex;
-        justify-content: center;
-        padding: 0;
-        margin-left: 4px;
-        margin-right: 4px;
-        .nav-link {
-          text-decoration: none;
-          background-color: $primary-bg-color;
-          border: 0;
-          font-size: 1vw;
-          color: $card-primary-alt-color;
-          font-weight: 300;
-
-          &:hover {
-            color: rgba(0, 0, 0, 0.87);
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 0.9vw;
-          }
-        }
-      }
-    }
-  }
-}
 
 // ------------------------------------------------------------
 
@@ -227,19 +169,28 @@ header {
 
 .product-search {
   // border: 1px solid red;
-  width: 60%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   padding: 6px;
   margin-top: 2px;
   margin-bottom: 2px;
+  flex-direction: column;
   justify-content: center;
+
+  .home-message {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6px;
+  }
   .product-search-input {
     color: rgb(104, 104, 104);
     font-size: 0.9em;
     height: 24px;
-    width: 100%;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     padding-left: 14px;
     padding-right: 14px;
@@ -249,6 +200,55 @@ header {
     background-color: #ffffff;
     &:focus {
       color: rgb(56, 56, 56);
+    }
+  }
+
+  .nav-categories {
+    padding-top: 8px;
+    // border: 1px solid red;
+    min-height: 20px;
+    max-height: 60px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 300;
+    color: $nav-text-color;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 0.9vw;
+  
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 2px;
+  
+      li {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        margin-left: 4px;
+        margin-right: 4px;
+        .nav-link {
+          text-decoration: none;
+          background-color: $secundary-bg-color;
+          border: 0;
+          font-size: 1vw;
+          color: $card-primary-alt-color;
+          font-weight: 300;
+  
+          &:hover {
+            color: rgba(0, 0, 0, 0.87);
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 0.9vw;
+          }
+        }
+      }
     }
   }
 }
@@ -271,11 +271,11 @@ header {
   margin-bottom: 8px;
   background-color: $card-bg-color;
   height: 291px;
-  border: 1px solid rgba(0, 0, 0, 0.205);   
-  box-shadow: 1px 1px 1px  rgba(0, 0, 0, 0.075);  
+  border: 1px solid rgba(0, 0, 0, 0.205);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.075);
 
   &:hover {
-    border: 1px solid rgba(0, 0, 0, 0.274);     
+    border: 1px solid rgba(0, 0, 0, 0.274);
     cursor: pointer;
     position: relative;
     top: -1px;
@@ -347,11 +347,10 @@ header {
         margin-top: 2px;
       }
     }
- 
   }
 
   .product-buy {
-    border-top:  1px solid rgba(0, 0, 0, 0.137);
+    border-top: 1px solid rgba(0, 0, 0, 0.137);
     height: 30px;
     width: 100%;
     margin-left: auto;
