--- a/src/css/Main-content.css
+++ b/src/css/Main-content.css
@@ -14,8 +14,8 @@
   color: white;
   font-size: calc(0.9vh + 0.7vw);
   font-weight: 300;
-  height: auto;
+  height: 5.4vh;
   margin: 0;
   padding: 1.4vh;
-  width: auto;
+  width: 40.4vh;
 }
